# VeosMCP

./: .gitignore  .pylintrc  README.md  VeosMCP.cmd  VeosMCP.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yaml
packaging/: pyinstaller.spec
src/veos_mcp/: __init__.py  runtime.py  server.py  veos_automation.py  veos_cli.py  veos_path_resolver.py
src/veos_mcp/models/: __init__.py  cli_command_result.py  errors.py  import_result.py  signal_summary.py
src/veos_mcp/parsers/: __init__.py  model_parser.py
src/veos_mcp/resources/: __init__.py  log_files.py
src/veos_mcp/schemas/: __init__.py  cli_command_result.py  signal_summary.py
src/veos_mcp/services/: model_parser.py
src/veos_mcp/tools/: __init__.py  file_import.py  log_file_access.py  osa_creation.py  sim_control.py  system_extraction.py  system_modification.py
tests/: __init__.py  test_mcp_surface_smoketest.py  test_server_startup.py  test_tool_integration.py  test_veos_automation.py  test_veos_cli.py  test_veos_path_resolver.py  tool_test_helpers.py
tests/resources/: test_log_files.py
tests/tools/: test_file_import.py  test_log_file_access.py  test_osa_creation.py  test_sim_control.py  test_system_extraction.py  test_system_modification.py
